fix text overflow

--- a/app/assets/stylesheets/group_show_styles.scss
+++ b/app/assets/stylesheets/group_show_styles.scss
@@ -193,7 +193,7 @@
                                     max-height: 56px;
                                     width: 300px;
                                 }
-                                .desctiption-container {
+                                .description-container {
                                     overflow: hidden;
                                     .description {
                                         font-weight: 400;
